# Ranking-App

./: .gitignore  README.md  pyproject.toml
src/: db_refresh.py  import_csv.py  server.py
src/flask_practice/: __init__.py  views.py
src/flask_practice/models/: models.py  ranking.py
src/flask_practice/static/: game.js  ranking_list.js
src/flask_practice/templates/: add_ranking.html  category_list.html  edit-ranking.html  game.html  index.html  layout.html  ranking.html  ranking_history.html  ranking_list.html
src/instance/: sample_flask.db
