[project]
name = "flask-practice"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "武藤優哉", email = "metagurosyuya@gmail.com" }
]
dependencies = [
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "sqlalchemy-utils>=0.41.2",
    "flask-wtf>=1.2.1",
    "flask-bootstraps>=3.3.7.8",
    "pandas>=2.2.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.12.0",
    "ruff>=0.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask_practice"]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_untyped_calls = false

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
    "D", # pydocstyle
]
ignore = []
# 1行の最大文字数
line-length = 88

extend-ignore = [
    "D105", # undocumented-magic-method
    "D107", # undocumented-public-init
    "D205", # blank-line-after-summary
    "D415" # ends-in-punctuation
]

[tool.ruff.lint.pydocstyle]
# docstringをgoogle styleにする
convention = "google"

[tool.ruff.per-file-ignores]
# 個別設定
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]
